@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{20C30A1C-05D3-48C6-A371-5FD522499DD2}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -43,6 +43,7 @@
     <Compile Include="BindingEnvironmentTest.cs" />
     <Compile Include="ChannelTests.cs" />
     <Compile Include="CommandsTests.cs" />
+    <Compile Include="QueueChannelTests.cs" />
     <Compile Include="DynamicClassTests.cs" />
     <Compile Include="DynamicObjectTests.cs" />
     <Compile Include="ExpressionsTests.cs" />
